# INE5633-2025.02

./: README.md
trabalho_1/: README.md
trabalho_1/impl/: Makefile  README.md
trabalho_1/impl/assets/: 24pzzl.txt
trabalho_1/impl/resources/: 15pzzl_0.txt  15pzzl_1.txt  15pzzl_2.txt  15pzzl_3.txt  15pzzl_5.txt  15pzzl_6.txt  15pzzl_7.txt  15pzzl_9.txt  24pzzl_0.txt  24pzzl_2.txt  24pzzl_5.txt  24pzzl_7.txt  24pzzl_8.txt  8pzzl_0.txt  8pzzl_1.txt  8pzzl_2.txt  8pzzl_4.txt  8pzzl_6.txt  pzzl_0_15_L1.txt  pzzl_0_15_L2.txt  pzzl_0_15_L3.txt  pzzl_0_24_L0.txt  pzzl_0_24_L1.txt  pzzl_0_24_L2.txt  pzzl_0_24_L3.txt  pzzl_0_8_L1.txt  pzzl_0_8_L2.txt  pzzl_0_8_L3.txt  pzzl_1_15_L1.txt  pzzl_1_15_L2.txt  pzzl_1_15_L3.txt  pzzl_1_24_L1.txt  pzzl_1_24_L2.txt  pzzl_1_24_L3.txt  pzzl_1_8_L1.txt  pzzl_1_8_L2.txt  pzzl_1_8_L3.txt  pzzl_2_15_L1.txt  pzzl_2_15_L2.txt  pzzl_2_15_L3.txt  (+71 more)
trabalho_1/impl/src/py_8pzzl/: algorithm.py  decorators.py  hashing.py  heuristic.py  heuristics.py  main.py  search.py  types.py  utils.py
trabalho_1/impl/src/py_8pzzl/assets/: in_15pzzl.txt  in_24pzzl.txt
trabalho_1/latex/: .nvimrc.lua  article.tex  references.bib
trabalho_1/py_8pzzl/: pyproject.toml
trabalho_1/py_8pzzl/src/py_8pzzl/: main.py
trabalho_1/util/: generator.py
